Fix scaling issues on mobile devices

--- a/editor/css/style.css
+++ b/editor/css/style.css
@@ -1,17 +1,17 @@
 /* Color palette: */
 :root {
     --whitey: #faf3ddff;
-    --whitey-hover: #F4E6B8;
+    --whitey-hover: #f4e6b8;
     --greeny: #02c39aff;
-    --greeny-hover: #02A27F;
+    --greeny-hover: #02a27f;
     --pinky: #e58c8aff;
-    --pinky-hover: #DE6A68;
-    --pinky-darker: #DA5A58;
+    --pinky-hover: #de6a68;
+    --pinky-darker: #da5a58;
     --blues: #77b6eaff;
     --blues-hover: #77b6eaff;
-    --blues-hover: #60AAE6;
+    --blues-hover: #60aae6;
     --blacky: #363732ff;
-    --blacky-hover: #2A2B27;
+    --blacky-hover: #2a2b27;
 }
 
 .bg-white {
@@ -43,11 +43,11 @@ body {
     padding: 0;
     margin: 0;
     font-family: Helvetica, sans-serif;
-    overflow: hidden;
     background-color: var(--whitey);
 }
 
-h3, h4 {
+h3,
+h4 {
     margin: 0.3rem;
 }
 
@@ -68,30 +68,41 @@ h3, h4 {
 .modes-holder {
     grid-area: modes;
     text-align: center;
+    overflow: auto;
+    padding-bottom: 1rem;
+    border-top-right-radius: 1rem;
 }
 
 #canvas-holder {
     grid-area: main;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
+    overflow: hidden;
 }
-canvas{
+canvas {
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     box-shadow: 5px 10px 18px #888888;
+    margin: 0px;
 }
 
 .sidebar {
     grid-area: sidebar;
+    overflow: auto;
+    padding-bottom: 1rem;
 }
 
 .page-container {
     display: grid;
     grid-template-columns: 10rem auto 10rem;
-    grid-template-rows: 2rem auto;
+    grid-template-rows: 2rem 1fr;
     grid-template-areas:
         "header timebar sidebar"
         "modes main sidebar";
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 .button {
@@ -103,7 +114,6 @@ canvas{
     text-decoration: none;
     display: inline-block;
     border-radius: 0.3em;
-    box-shadow: var(--black-olive);
 }
 
 .big-button {
@@ -121,10 +131,56 @@ canvas{
     box-shadow: 5px 10px 18px #888888;
 }
 
-.button:hover, .big-button:hover{
+.button:hover,
+.big-button:hover {
     background-color: var(--pinky-hover);
 }
 
-.fix-width{
+.fix-width {
     width: 75%;
+}
+
+.rotate {
+    grid-area: rotate;
+    display: none;
+}
+
+/* For smaller laptops */
+@media (max-width: 1125px) {
+    .big-button {
+        padding: 0.25em 0.4em;
+        font-size: small;
+    }
+}
+
+/* For tablets */
+@media (max-width: 768px) {
+    .page-container {
+        grid-template-columns: 8rem auto 8rem;
+    }
+
+    .button {
+        padding: 0.4em 0.5em;
+        font-size: x-small;
+    }
+}
+
+/* For mobile devices */
+@media (max-width: 500px) {
+    .page-container {
+        grid-template-columns: 0rem auto 0rem;
+        grid-template-rows: 2rem 1fr 7rem;
+        grid-template-areas:
+            "header timebar sidebar"
+            "modes main sidebar"
+            "rotate rotate rotate";
+    }
+
+    .rotate{
+        display: block;
+        font-size: x-large;
+        font-weight: bold;
+        text-align: center;
+        padding-top: 1.2rem;
+    }
 }
